# filestore

./: .design.instructions.md  Cargo.toml  index.html
book/: 01-background.html  02-architecture-overview.html  03-record-manager.html  04-core-storage-components.html  05-file-system-integration.html  06-performance-optimization.html  07-reliability-and-recovery.html  08-configuration-and-api.html  09-monitoring-and-observability.html  10-deployment-and-operations.html  11-security.html  12-testing-strategy.html  13-future-enhancements.html  14-implementation-roadmap.html  15-distributed-architecture.html  16-component-design.html  404.html  index.html  print.html  searchindex.js  searchindex.json
crates/api/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/mq/: Cargo.toml
crates/mq/src/: appender.rs  lib.rs  queue.rs  store.rs
crates/store/: Cargo.toml
crates/store/src/: core.rs  lib.rs  mmap.rs  spec.rs
docs/src/: 01-background.md  02-architecture-overview.md  03-record-manager.md  04-core-storage-components.md  05-file-system-integration.md  06-performance-optimization.md  07-reliability-and-recovery.md  08-configuration-and-api.md  09-monitoring-and-observability.md  10-deployment-and-operations.md  11-security.md  12-testing-strategy.md  13-future-enhancements.md  14-implementation-roadmap.md  15-distributed-architecture.md  16-component-design.md  README.md  SUMMARY.md  design.md
