[package]
name = "mq"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
snafu = { workspace = true }
value-log = { workspace = true }
memmap2 = { workspace = true }
bon = { workspace = true }
rsketch-common = { path = "../common" }
smart-default = { workspace = true }