[package]
name = "store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
value-log = { workspace = true }
